[tool.poetry]
name = "pikpak-cli"
version = "0.1.0"
description = "A pikpak command line client"
readme = "README.md"
repository = "https://github.com/strongbugman/pikpak_cli"
authors = ["strongbugman <strongbugman@gmail.com>"]
license = "MIT"
classifiers=[
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [
    { include = "pikpak_cli" },
]
[tool.poetry.scripts]
pikpak_cli = "pikpak_cli.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tenacity = ">=4.8.0"
ujson = ">=1.3.4"
aiofiles = ">=0.3.1"
typing_extensions = ">=3.6"
ant-nest = ">=1.0.1"
tqdm = ">=4.64.1"
typer = ">=0.7.0"
rich = ">=13.3.1"
ipython = ">=8.11.0"
prompt-toolkit = ">=3.0.38"

[tool.poetry.dev-dependencies]
pytest = ">=3.3.1"
pytest-asyncio = ">=0.8.0"
pytest-cov = ">=2.5.1"
pytest-mock = ">=2.0.0"
black = ">=20.8b1"
flake8 = ">=3.8.4"
mypy = ">=0.790"
codecov = ">=2.1.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
